Fix font size on mobile view of my-experience section

--- a/static/index.css
+++ b/static/index.css
@@ -113,6 +113,10 @@ body {
 	margin-bottom: 80px;
 }
 
+#my-experiences h4 {
+	white-space: nowrap;
+}
+
 .supervisor {
 	margin-top: -11px !important;
 }
