--- a/static/responsive.css
+++ b/static/responsive.css
@@ -10,11 +10,11 @@
 	}
 
 	.horizontal-item h1 {
-		font-size: 22px;
+		font-size: 20px;
 	}
 
 	.horizontal-item h4 {
-		font-size: 16px;
+		font-size: 14px;
 	}
 
 	#my-languages, #my-courses ul {
